registration password reset email notification

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -2,4 +2,5 @@
 <p> You now have an account with us.<br>
 Your username on record is: <%= @user.username %><br>
 Your email on record is: <%= @user.email%></p>
+<p>You can sign into your account here. [place login url here]</p>
 <p>Again, thank you for registering with us, enjoy!</p>
